# Owan

./: README.md
.github/workflows/: ci.yaml
applications/owan/: .gitignore  LICENSE  Makefile  pyproject.toml
applications/owan/environments/continuous-integration/: docker-compose.yaml
applications/owan/environments/continuous_integration/: Dockerfile  docker-compose.yaml
applications/owan/environments/development/: Dockerfile  docker-compose.yaml  owan-template.env
applications/owan/environments/jetson/: Dockerfile  docker-compose.yaml
applications/owan/environments/production/: docker-compose.yaml
applications/owan/environments/production/web/nginx/sites-available/: owan-broker.conf
applications/owan/owan/: bootstrap.py  settings.py  tasks.py  worker.py  wsgi.py
applications/owan/owan/domain/: __init__.py  compress.py  io.py
applications/owan/owan/libs/: storage.py
applications/owan/owan/scripts/: export_docs.py
applications/owan/owan/views/: routing.py
applications/owan/owan/views/api/: __init__.py  _converters.py  _lib.py
applications/owan/src/: wsgi.py
applications/owan/src/views/: routing.py
applications/owan/src/views/api/: __init__.py
applications/owan/tests/: conftest.py  test_tasks.py
applications/owan/tests/doamin/: test_compress.py  test_domain.py  test_io.py
applications/owan/tests/libs/: test_libs.py
applications/owan/tests/views/: test_api.py
applications/owan/web/conf.d/: owan-broker.conf
