[tool.poetry]
name = "owan"
version = "0.1.0"
description = ""
authors = ["gatheluck <gatheluck+tech@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.7"
pydantic = "^1.8.2"
typing-extensions = "^3.10.0"
celery = {extras = ["redis"], version = "^5.1.2"}
uvicorn = {extras = ["standard"], version = "^0.15.0"}
gunicorn = "^20.1.0"
fastapi = "^0.70.0"
dataclasses = "^0.8"
types-dataclasses = "^0.6.1"
python-multipart = "^0.0.5"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
requests = "^2.26.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true
show_column_numbers = true

check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_decorators = true
disallow_untyped_defs = false
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
